--- a/goodreads_2.ipynb
+++ b/goodreads_2.ipynb
@@ -203,6 +203,99 @@
    ]
   },
   {
+   "source": [
+    "import pingouin as pg               # базовые функции библиотеки\n",
+    "from pingouin import welch_anova    # тест Велча"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 10,
+   "outputs": []
+  },
+  {
+   "source": [
+    "# Загрузка данных и общий обзор #"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = pd.read_csv ('data/books_tidy_data.csv', parse_dates = ['publication_date'], dtype = { 'decade' : 'object', 'quarter' : 'object' , 'tra_co' : 'object' })\n",
+    "# загружаем данные и исправляем тип данных"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  publication_date                                              title  \\\n",
+       "0       2006-09-16  Harry Potter and the Half-Blood Prince (Harry ...   \n",
+       "1       2004-09-01  Harry Potter and the Order of the Phoenix (Har...   \n",
+       "2       2003-11-01  Harry Potter and the Chamber of Secrets (Harry...   \n",
+       "3       2004-05-01  Harry Potter and the Prisoner of Azkaban (Harr...   \n",
+       "4       2004-09-13  Harry Potter Boxed Set  Books 1-5 (Harry Potte...   \n",
+       "\n",
+       "                      authors  average_rating language_code  num_pages  \\\n",
+       "0  J.K. Rowling,Mary GrandPré            4.57           eng        652   \n",
+       "1  J.K. Rowling,Mary GrandPré            4.49           eng        870   \n",
+       "2                J.K. Rowling            4.42           eng        352   \n",
+       "3  J.K. Rowling,Mary GrandPré            4.56           eng        435   \n",
+       "4  J.K. Rowling,Mary GrandPré            4.78           eng       2690   \n",
+       "\n",
+       "   ratings_count  text_reviews_count        publisher decade quarter tra_co  \n",
+       "0        2095690               27591  Scholastic Inc.   2000       3      1  \n",
+       "1        2153167               29221  Scholastic Inc.   2000       3      1  \n",
+       "2           6333                 244       Scholastic   2000       4      0  \n",
+       "3        2339585               36325  Scholastic Inc.   2000       2      1  \n",
+       "4          41428                 164       Scholastic   2000       3      1  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>publication_date</th>\n      <th>title</th>\n      <th>authors</th>\n      <th>average_rating</th>\n      <th>language_code</th>\n      <th>num_pages</th>\n      <th>ratings_count</th>\n      <th>text_reviews_count</th>\n      <th>publisher</th>\n      <th>decade</th>\n      <th>quarter</th>\n      <th>tra_co</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2006-09-16</td>\n      <td>Harry Potter and the Half-Blood Prince (Harry ...</td>\n      <td>J.K. Rowling,Mary GrandPré</td>\n      <td>4.57</td>\n      <td>eng</td>\n      <td>652</td>\n      <td>2095690</td>\n      <td>27591</td>\n      <td>Scholastic Inc.</td>\n      <td>2000</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2004-09-01</td>\n      <td>Harry Potter and the Order of the Phoenix (Har...</td>\n      <td>J.K. Rowling,Mary GrandPré</td>\n      <td>4.49</td>\n      <td>eng</td>\n      <td>870</td>\n      <td>2153167</td>\n      <td>29221</td>\n      <td>Scholastic Inc.</td>\n      <td>2000</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2003-11-01</td>\n      <td>Harry Potter and the Chamber of Secrets (Harry...</td>\n      <td>J.K. Rowling</td>\n      <td>4.42</td>\n      <td>eng</td>\n      <td>352</td>\n      <td>6333</td>\n      <td>244</td>\n      <td>Scholastic</td>\n      <td>2000</td>\n      <td>4</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2004-05-01</td>\n      <td>Harry Potter and the Prisoner of Azkaban (Harr...</td>\n      <td>J.K. Rowling,Mary GrandPré</td>\n      <td>4.56</td>\n      <td>eng</td>\n      <td>435</td>\n      <td>2339585</td>\n      <td>36325</td>\n      <td>Scholastic Inc.</td>\n      <td>2000</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2004-09-13</td>\n      <td>Harry Potter Boxed Set  Books 1-5 (Harry Potte...</td>\n      <td>J.K. Rowling,Mary GrandPré</td>\n      <td>4.78</td>\n      <td>eng</td>\n      <td>2690</td>\n      <td>41428</td>\n      <td>164</td>\n      <td>Scholastic</td>\n      <td>2000</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "db.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = db.set_index ('publication_date') # установка даты в качестве индекса"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nDatetimeIndex: 10838 entries, 2006-09-16 to 2006-05-28\nData columns (total 11 columns):\n #   Column              Non-Null Count  Dtype  \n---  ------              --------------  -----  \n 0   title               10838 non-null  object \n 1   authors             10838 non-null  object \n 2   average_rating      10838 non-null  float64\n 3   language_code       10838 non-null  object \n 4   num_pages           10838 non-null  int64  \n 5   ratings_count       10838 non-null  int64  \n 6   text_reviews_count  10838 non-null  int64  \n 7   publisher           10838 non-null  object \n 8   decade              10838 non-null  object \n 9   quarter             10838 non-null  object \n 10  tra_co              10838 non-null  object \ndtypes: float64(1), int64(3), object(7)\nmemory usage: 1016.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.info() # общий обзор данных"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
