--- a/goodreads_3.ipynb
+++ b/goodreads_3.ipynb
@@ -120,6 +120,113 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# загрузка данных и исправление типа данных\n",
+    "db = pd.read_csv('data/books_tidy_data.csv', parse_dates=['publication_date'], dtype={'decade':'object', 'quarter':'object', 'tra_co':'object'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# удалим признаки, которые не будем рассматривать далее\n",
+    "db = db.drop(['title', 'publication_date', 'authors', 'language_code', 'publisher'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   average_rating  num_pages  ratings_count  text_reviews_count decade  \\\n",
+       "0            4.57        652        2095690               27591   2000   \n",
+       "1            4.49        870        2153167               29221   2000   \n",
+       "2            4.42        352           6333                 244   2000   \n",
+       "3            4.56        435        2339585               36325   2000   \n",
+       "4            4.78       2690          41428                 164   2000   \n",
+       "\n",
+       "  quarter tra_co  \n",
+       "0       3      1  \n",
+       "1       3      1  \n",
+       "2       4      0  \n",
+       "3       2      1  \n",
+       "4       3      1  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>average_rating</th>\n      <th>num_pages</th>\n      <th>ratings_count</th>\n      <th>text_reviews_count</th>\n      <th>decade</th>\n      <th>quarter</th>\n      <th>tra_co</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4.57</td>\n      <td>652</td>\n      <td>2095690</td>\n      <td>27591</td>\n      <td>2000</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4.49</td>\n      <td>870</td>\n      <td>2153167</td>\n      <td>29221</td>\n      <td>2000</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.42</td>\n      <td>352</td>\n      <td>6333</td>\n      <td>244</td>\n      <td>2000</td>\n      <td>4</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.56</td>\n      <td>435</td>\n      <td>2339585</td>\n      <td>36325</td>\n      <td>2000</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4.78</td>\n      <td>2690</td>\n      <td>41428</td>\n      <td>164</td>\n      <td>2000</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "db.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 10838 entries, 0 to 10837\nData columns (total 7 columns):\n #   Column              Non-Null Count  Dtype  \n---  ------              --------------  -----  \n 0   average_rating      10838 non-null  float64\n 1   num_pages           10838 non-null  int64  \n 2   ratings_count       10838 non-null  int64  \n 3   text_reviews_count  10838 non-null  int64  \n 4   decade              10838 non-null  object \n 5   quarter             10838 non-null  object \n 6   tra_co              10838 non-null  object \ndtypes: float64(1), int64(3), object(3)\nmemory usage: 592.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       average_rating     num_pages  ratings_count  text_reviews_count\n",
+       "count    10838.000000  10838.000000   1.083800e+04        10838.000000\n",
+       "mean         3.942158    344.175217   1.834788e+04          553.074737\n",
+       "std          0.295387    238.556381   1.138660e+05         2599.330244\n",
+       "min          1.000000     11.000000   0.000000e+00            0.000000\n",
+       "25%          3.770000    203.000000   1.170000e+02           10.000000\n",
+       "50%          3.960000    304.000000   8.035000e+02           49.000000\n",
+       "75%          4.130000    417.000000   5.226750e+03          248.000000\n",
+       "max          5.000000   6576.000000   4.597666e+06        94265.000000"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>average_rating</th>\n      <th>num_pages</th>\n      <th>ratings_count</th>\n      <th>text_reviews_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>10838.000000</td>\n      <td>10838.000000</td>\n      <td>1.083800e+04</td>\n      <td>10838.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>3.942158</td>\n      <td>344.175217</td>\n      <td>1.834788e+04</td>\n      <td>553.074737</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.295387</td>\n      <td>238.556381</td>\n      <td>1.138660e+05</td>\n      <td>2599.330244</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>1.000000</td>\n      <td>11.000000</td>\n      <td>0.000000e+00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>3.770000</td>\n      <td>203.000000</td>\n      <td>1.170000e+02</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>3.960000</td>\n      <td>304.000000</td>\n      <td>8.035000e+02</td>\n      <td>49.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>4.130000</td>\n      <td>417.000000</td>\n      <td>5.226750e+03</td>\n      <td>248.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>5.000000</td>\n      <td>6576.000000</td>\n      <td>4.597666e+06</td>\n      <td>94265.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# обзор основных характеристик\n",
+    "db.describe()"
+   ]
+  },
+  {
+   "source": [
+    "# Визуальный подход"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
